bynkc/tests/fixtures/positive/252_multi_file_commons_dotted_test/src/shipping/rates/base.bynk
commons shipping.rates {
  type Rate = Int where NonNegative
}
