bynkc/tests/fixtures/negative/108_query_at_boundary/input.bynk
commons c {
  type Bad = {
    q: Query[Int],
  }
}
